<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AvoidTicket</string>
    <string name="hello_world">Welcome! Please choose your parking permit type</string>
    <string name="action_settings">Settings</string>
    <string name="permit_type_faculty">Faculty</string>
    <string name="permit_type_commuter">Commuter</string>
    <string name="permit_type_resident">Resident</string>
    <string name="permit_type_visitor">Visitor</string>
    <string name="button_next">Next</string>

</resources>
