<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nguyenlv.avoidticket.MainActivity" >

    <TextView
        android:id="@+id/tvHelloWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rgPermitType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHelloWorld"
        android:layout_below="@+id/tvHelloWorld" >
    
	    <RadioButton
	        android:id="@+id/rbFaculty"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:text="@string/permit_type_faculty" />
	    
	    <RadioButton
	        android:id="@+id/rbCommuter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:text="@string/permit_type_commuter" />
	    
	    <RadioButton
	        android:id="@+id/rbResident"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:text="@string/permit_type_resident" />
	    
	    <RadioButton
	        android:id="@+id/rbVisitor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:text="@string/permit_type_visitor" />
    
    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgPermitType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_next" />

</RelativeLayout>